@@ -5,12 +5,12 @@
 	<controls>
 		<control type="group">
 			<centerleft>50%</centerleft>
-			<height>710</height>
+			<height>780</height>
 			<centertop>50%</centertop>
 			<width>1000</width>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="1000" />
-				<param name="height" value="710" />
+				<param name="height" value="780" />
 				<param name="header_label" value="$LOCALIZE[40099]" />
 				<param name="header_id" value="1" />
 			</include>
@@ -19,7 +19,7 @@
 				<top>80</top>
 				<control type="grouplist" id="11100">
 					<width>1000</width>
-					<height>720</height>
+					<height>800</height>
 					<itemgap>0</itemgap>
 					<onup>11100</onup>
 					<ondown>11100</ondown>
@@ -50,6 +50,12 @@
 						<selected>Skin.HasSetting(HideWatchedEpisodesFromRecently)</selected>
 						<onclick>Skin.ToggleSetting(HideWatchedEpisodesFromRecently)</onclick>
 						<enable>!Skin.HasSetting(hide_recentlytvshows)</enable>
+					</control>
+					<control type="radiobutton" id="11120">
+						<label>$LOCALIZE[40097] : $LOCALIZE[40012]</label>
+						<include>DefaultSettingButton</include>
+						<selected>Skin.HasSetting(hide_nextepisodes)</selected>
+						<onclick>Skin.ToggleSetting(hide_nextepisodes)</onclick>
 					</control>
 					<control type="radiobutton" id="11115">
 						<label>$LOCALIZE[40097] : $LOCALIZE[626]</label>
