@@ -168,6 +168,14 @@
 							<param name="widget_target" value="videos"/>
 							<param name="list_id" value="6100"/>
 						</include>
+						<include content="WidgetNextAiringEpisodes" condition="Library.HasContent(tvshows) + !Skin.HasSetting(hide_nextepisodes)">
+							<param name="content_path" value="plugin://script.skin.helper.widgets/?action=next&mediatype=episodes&reload=$INFO[Window(Home).Property(widgetreload)]"/>
+							<param name="sortby" value=""/>
+							<param name="sortorder" value="descending"/>
+							<param name="widget_header" value="$LOCALIZE[40012]"/>
+							<param name="widget_target" value="videos"/>
+							<param name="list_id" value="6700"/>
+						</include>
 						<include content="WidgetListPoster" condition="Library.HasContent(tvshows) + !Skin.HasSetting(hide_inprogresstvshows)">
 							<param name="content_path" value="videodb://inprogresstvshows"/>
 							<param name="sortby" value="lastplayed"/>
